Some alignment issues with record icons

--- a/web/data/blip.css
+++ b/web/data/blip.css
@@ -65,7 +65,7 @@ h1 {
   padding: 0.2em 0 0.2em 0;
 }
 h1 img.icon {
-  margin: 0.83em 0.5em 0 0;
+  margin: 2px 0.5em 0 0;
 }
 h1 div.title {
   font-size: 1.44em;
